preinake, nije gotovo

--- a/IzvorniKod/Backend/src/main/resources/application.properties
+++ b/IzvorniKod/Backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.h2.console.enabled= true
-spring.datasource.url= jdbc:h2:mem:testdb
-opp.admin.password= $2a$10$7dR1nXFoZCc1I9UMEWxWDO4AIC7CRh66h5O90YlcNk7wo0GqaHoI6
-
-spring.profiles.active= basic-security
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=admin
+spring.datasource.password=pass
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
