--- a/IzvorniKod/Backend/src/main/resources/application.properties
+++ b/IzvorniKod/Backend/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/jwt_security
+spring.datasource.url=jdbc:postgresql://localhost:5432/projektrbaza
 spring.datasource.username=postgres
 spring.datasource.password=bazepodataka
-# ovo je moja lokalna baza na kompu (promijeniti za svoju)
-
-# spring.datasource.url= jdbc:postgresql://localhost:5432/proggersbaza
-# spring.datasource.username= postgres
-# spring.datasource.password= bazepodataka
 
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 <!--netstat -ao |find /i "listening"  nadi pid koji treba ubit-->
 <!--Taskkill /F /IM pidkojivec-->
