--- a/IzvorniKod/Backend/src/main/resources/application.properties
+++ b/IzvorniKod/Backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=bazepodataka
 
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 <!--netstat -ao |find /i "listening"  nadi pid koji treba ubit-->
 <!--Taskkill /F /IM pidkojivec-->
