--- a/IzvorniKod/Frontend/pal/package.json
+++ b/IzvorniKod/Frontend/pal/package.json
@@ -13,7 +13,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
