--- a/IzvorniKod/Frontend/pal/package.json
+++ b/IzvorniKod/Frontend/pal/package.json
@@ -17,7 +17,8 @@
     "web-vitals": "^2.1.4",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "http-proxy-middleware": "^2.0.1"
+    "http-proxy-middleware": "^2.0.1",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "node src/setupProxy.js && react-scripts start",
